--- a/style.css
+++ b/style.css
@@ -82,11 +82,14 @@ header .title .min-size{
     position: absolute;
     top: calc(((40px + 3vw) / 2) - 2px);
     transform: rotate(45deg);
+    transition: transform 0.5s ease-in-out;
+
 }
 .burger-menu .rotation2{
     position: absolute;
     top: calc(((40px + 3vw) / 2) - 2px);
     transform: rotate(-45deg);
+    transition: transform 0.5s ease-in-out;
 }
 .burger-menu .disparition{
     opacity: 0;
@@ -107,11 +110,11 @@ header .title .min-size{
 .menu-list{
     display: none;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-around;   
 }
 
 .menu-list-active{
-    display:flex;
+    display: flex;
     position: absolute;
     right: 0;
     width: 100vw;
@@ -217,11 +220,11 @@ footer .social-link .fa{
 
 
 /* **** Menu article **** */
-nav.sticky-menu-article{
+/*nav.sticky-menu-article{
     position:sticky;
     top: calc(42.5px + 3vw);
-    z-index: -1; /*pour passer sous menu-list-active du menu-burger*/
-}
+    z-index: -1; *//*pour passer sous menu-list-active du menu-burger
+}*/
 
 
 nav .sub-menu{
@@ -231,22 +234,29 @@ nav .sub-menu{
 }
 
 nav .sub-menu-list{
-    font-size: calc(1.2rem + 0.6vw);
+    font-size: calc(1rem + 0.5vw);
     color: #fff;
     text-align: center;
     padding: 0.5rem;
     margin: 0 0.3rem 1rem 0.3rem;
     background-color: #0c1353;
     border-bottom-right-radius: 1.5rem;
-    cursor: pointer
+    cursor: pointer;
+    transition: 0.4s;
 }
+
+nav .sub-menu-list:hover{
+    background: linear-gradient(to right, #15a6c7, #0d3670); 
+}
+
+/* ******** Welcome Page ******** */
 
 /* **** Section article **** */
-
+/*
 .presentation{
-    position:relative; /*nécessaire pour z-index*/
-    z-index: -2; /*pour passer sous sticky-menu-article qui est en -1*/
-}
+    position:relative; nécessaire pour z-index
+    z-index: -2; /*pour passer sous sticky-menu-article qui est en -1
+}*/
 .presentation .flex{
     display: none;
 }
@@ -257,7 +267,7 @@ nav .sub-menu-list{
     align-items: center;
 }
 
-.presentation h3{
+h3{
     font-size: calc(1.7rem + 1.5vw);
     margin: 1rem;
 }
@@ -269,20 +279,25 @@ nav .sub-menu-list{
 }
 
 .presentation img{
-    width: 50%;
+    width: 60%;
+    border-radius: 5px 20px;
 }
+
 .presentation .paragraphe{
-    color: #646363;
-    font-size: calc(1.5rem + 0.3vw);
+    color: #525050;
+    font-size: calc(1.4rem + 0.2vw);
     text-align: justify;
     margin: 1rem 1.5rem;
     padding: 0 1.5rem 1rem;
     box-shadow: 1.95px 1.95px 2.6px rgba(0, 0, 0, 0.15) ;
     border-bottom-right-radius: 1.5rem;
-    
 }
 
-@media screen and (min-width:740px){
+.presentation .paragraphe p:last-of-type{
+    margin-top: 1rem;
+}
+
+@media screen and (min-width:1000px){
     .presentation h3{
         margin-bottom: 2rem;
     }
@@ -294,8 +309,54 @@ nav .sub-menu-list{
         width: 35%;
         margin-left: 1.5rem;  
     }
+    .presentation .order-a{
+        order: 1;
+    }
+    .presentation .order-b{
+        order: 2;
+        margin-left: 0;
+        margin-right: 1.5rem;
+    }
     .presentation .paragraphe p:last-of-type{
         margin-top: 2rem;
     }
+}
+
+
+/* ******** Level Page ******** */
+
+.table-flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
+
+table {
+    margin: auto;
+    text-align: center;
+    border-collapse: collapse;
+    border-bottom: 3px solid #000;
+    box-shadow: 0 0 7px #000;
+    width: 80%;
+  }
+  
+  thead {
+    background-color: #1c6ea4;
+    color: #fff;
+    font-size: 18px;
+  }
+  
+  th,
+  td {
+    height: 50px;
+    border: 1px solid #000;
+  }
+  
+  tbody tr:nth-child(2n) {
+    background-color: #e6eeff;
+  }
+  
+  tbody tr:nth-child(2n + 1) {
+    background-color: #d1dffd;
+  }
