--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ html{
 
 body{
     min-height: 100vh;
+    max-width: 1280px;
+    margin: 0 auto;
     background-color: #e0dddd;
     font-family: Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
 }
@@ -187,6 +189,19 @@ section.search{
     font-size: 2rem;
 }
 
+/* **** Scroll To Top **** */
+
+.scroll-to-top{
+    display: none;
+    position: fixed;
+    bottom: 5rem;
+    right: 1rem;
+    cursor: pointer;
+}
+.scroll-to-top img{
+    width: 50px;
+}
+
 
 /* **** Footer **** */
 
@@ -241,6 +256,7 @@ nav .sub-menu-list{
     margin: 0 0.3rem 1rem 0.3rem;
     background-color: #0c1353;
     border-bottom-right-radius: 1.5rem;
+    border-bottom-left-radius: 0.6rem;
     cursor: pointer;
     transition: 0.4s;
 }
@@ -248,6 +264,14 @@ nav .sub-menu-list{
 nav .sub-menu-list:hover{
     background: linear-gradient(to right, #15a6c7, #0d3670); 
 }
+
+
+@media screen and (min-width:1000px){
+    nav .sub-menu{
+        display: none;
+    }
+}
+
 
 /* ******** Welcome Page ******** */
 
@@ -286,7 +310,6 @@ h3{
 .presentation .paragraphe{
     color: #525050;
     font-size: calc(1.4rem + 0.2vw);
-    text-align: justify;
     margin: 1rem 1.5rem;
     padding: 0 1.5rem 1rem;
     box-shadow: 1.95px 1.95px 2.6px rgba(0, 0, 0, 0.15) ;
@@ -298,8 +321,17 @@ h3{
 }
 
 @media screen and (min-width:1000px){
+    .presentation{
+        margin-bottom: 3rem;
+    }
+    .presentation .flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .presentation h3{
-        margin-bottom: 2rem;
+        margin: 4rem 0 2rem;
     }
     .presentation .content{
         flex-direction: initial;
@@ -325,38 +357,72 @@ h3{
 
 /* ******** Level Page ******** */
 
-.table-flex{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+p{
+    font-size: 1.6rem;
+    margin: 1rem 2rem;
 
+  }
+  .container {
+    /* width: 80vmin; */
+    width: 90%;
+    margin: 2rem auto;
+    background-color: #ffffff;
+    box-shadow: 0 20px 30px rgba(62, 122, 201, 0.2);
+  }
+  .tabs {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  h4 {
+    font-size: 1.6rem;
+    background-color: #e4e9fd;
+    text-align: center;
+    padding: 1.5rem 0;
+    cursor: pointer;
+    font-weight: 600;
+  }
+  .tab-content {
+    background-color: #ffffff;
+    padding: 4rem 3rem;
+  }
+  .tab-content h5 {
+    font-size: 2.8rem;
+    margin-bottom: 1rem;
+    color: #000224;
+    font-weight: 600;
+  }
+  .tab-content img{
+    display: block;
+    width: 90%;
+    max-width: 50rem; 
+    margin: 1rem auto;
+    border-radius: 0.5rem;
+  }
+  .tab-content p {
+    font-size: 1.6rem;
+    text-align: justify;
+    color: #202238;
+  }
+  .tab-content .level {
+    display: none;
+  }
+  .tab-content .active {
+    display: block;
+  }
+  .tabs .active {
+    background-color: #ffffff;
+    color: #4d5bf9;
+  }
+
+.deep-evolution img{
+    margin: 2rem auto;
+    width: 90%;
+    border-radius: 0.5rem;
+    
 }
 
-table {
-    margin: auto;
-    text-align: center;
-    border-collapse: collapse;
-    border-bottom: 3px solid #000;
-    box-shadow: 0 0 7px #000;
-    width: 80%;
-  }
-  
-  thead {
-    background-color: #1c6ea4;
-    color: #fff;
-    font-size: 18px;
-  }
-  
-  th,
-  td {
-    height: 50px;
-    border: 1px solid #000;
-  }
-  
-  tbody tr:nth-child(2n) {
-    background-color: #e6eeff;
-  }
-  
-  tbody tr:nth-child(2n + 1) {
-    background-color: #d1dffd;
-  }
+@media screen and (min-width: 700px){
+    .deep-evolution img{
+        max-width: 63rem;
+    }
+}
