--- a/style.css
+++ b/style.css
@@ -24,6 +24,40 @@ body{
     font-family: Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
 }
 
+p{
+    color: #202238;
+    font-size: calc(1.4rem + 0.2vw);
+    margin: 1rem 1.5rem;
+}
+
+h2{
+    font-size: calc(1.2rem + 2vw);
+    color: #fff;
+    margin-bottom: 1rem;
+    font-weight: 400;
+}
+
+h3{
+    font-size: calc(1.7rem + 1.5vw);
+    margin: 4rem 0 2rem;
+    text-align: center;
+    color: #000224;
+}
+
+h4 {
+    font-size: 1.6rem;
+    background-color: #0c1353;
+    color: #fff;
+    text-align: center;
+    padding: 1.5rem 0;
+    cursor: pointer;
+}
+
+h5 {
+    font-size: 2.8rem;
+    color: #000224;
+}
+
 /* **** Header **** */
 
 header.header-flex{
@@ -36,7 +70,7 @@ header.header-flex{
     top: 0;
     left: 0;
     right: 0;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #fff;
 }
 
 header .logo{
@@ -171,12 +205,6 @@ section.search{
     height: calc(10rem + 2vh);
 }
 
-.search h2{
-    font-size: calc(1.2rem + 2vw);
-    color: #fff;
-    margin-bottom: 1rem;
-    font-weight: 400;
-}
 .search input{
     background: transparent;
     border: 1px solid #fff;
@@ -199,7 +227,7 @@ section.search{
     cursor: pointer;
 }
 .scroll-to-top img{
-    width: 50px;
+    width: 5rem;
 }
 
 
@@ -210,7 +238,6 @@ footer{
     justify-content: space-between;
     align-items: center;
     position: sticky;
-    color:#fff;
     font-size: 1.4rem;
     top: 100vh;
     height: calc(2.5rem + 1vh);
@@ -218,14 +245,17 @@ footer{
 }
 
 footer p{
-    margin-left: 2rem;;
+    margin-left: 2rem;
+    color: #fff;
+    font-size: 1.4rem;
+
 }
 footer .social-link ul{
     display: flex;
 }
 
 footer .social-link a{
-    color: white;
+    color: #fff;
     margin-right: 2rem;
 }
 
@@ -233,14 +263,12 @@ footer .social-link .fa{
     margin-right: 0.5rem;
 }
 
-
 /* **** Menu article **** */
 /*nav.sticky-menu-article{
     position:sticky;
     top: calc(42.5px + 3vw);
     z-index: -1; *//*pour passer sous menu-list-active du menu-burger
 }*/
-
 
 nav .sub-menu{
     display: flex;
@@ -262,9 +290,8 @@ nav .sub-menu-list{
 }
 
 nav .sub-menu-list:hover{
-    background: linear-gradient(to right, #15a6c7, #0d3670); 
+    background: linear-gradient(to right, #15a6c7, #0a2d5e); 
 }
-
 
 @media screen and (min-width:1000px){
     nav .sub-menu{
@@ -272,15 +299,14 @@ nav .sub-menu-list:hover{
     }
 }
 
-
 /* ******** Welcome Page ******** */
 
-/* **** Section article **** */
 /*
 .presentation{
     position:relative; nécessaire pour z-index
     z-index: -2; /*pour passer sous sticky-menu-article qui est en -1
 }*/
+
 .presentation .flex{
     display: none;
 }
@@ -289,11 +315,6 @@ nav .sub-menu-list:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-h3{
-    font-size: calc(1.7rem + 1.5vw);
-    margin: 1rem;
 }
 
 .presentation .content{
@@ -308,11 +329,9 @@ h3{
 }
 
 .presentation .paragraphe{
-    color: #525050;
-    font-size: calc(1.4rem + 0.2vw);
     margin: 1rem 1.5rem;
     padding: 0 1.5rem 1rem;
-    box-shadow: 1.95px 1.95px 2.6px rgba(0, 0, 0, 0.15) ;
+    box-shadow: 0.2rem 0.2rem 0.25rem  rgba(0, 0, 0, 0.15);
     border-bottom-right-radius: 1.5rem;
 }
 
@@ -330,9 +349,6 @@ h3{
         align-items: center;
     }
 
-    .presentation h3{
-        margin: 4rem 0 2rem;
-    }
     .presentation .content{
         flex-direction: initial;
         justify-content: center;
@@ -365,40 +381,28 @@ section.disp-active{
     display: block;
 }
 
-p{
-    font-size: 1.6rem;
-    margin: 1rem 2rem;
-
-  }
 .container {
     /* width: 80vmin; */
     width: 90%;
     margin: 2rem auto;
     background-color: #ffffff;
-    box-shadow: 0 20px 30px rgba(62, 122, 201, 0.2);
+    box-shadow: 0 2rem 3rem rgba(62, 122, 201, 0.2);
 }
 .tabs, .tabs-ens {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-h4 {
-    font-size: 1.6rem;
-    background-color: #e4e9fd;
-    text-align: center;
-    padding: 1.5rem 0;
-    cursor: pointer;
-    font-weight: 600;
+
+.tabs .active, .tabs-ens .active {
+    background-color: #ffffff;
+    color: #0c1353;
 }
+
 .tab-content, .tab-content-ens {
     background-color: #ffffff;
-    padding: 4rem 3rem;
+    padding: 2rem 3rem;
 }
-.tab-content h5, .tab-content-ens h5 {
-    font-size: 2.8rem;
-    margin-bottom: 1rem;
-    color: #000224;
-    font-weight: 600;
-}
+
 .tab-content img, .tab-content-ens img{
     display: block;
     width: 90%;
@@ -406,20 +410,12 @@ h4 {
     margin: 1rem auto;
     border-radius: 0.5rem;
 }
-.tab-content p, .tab-content-ens p {
-    font-size: 1.6rem;
-    text-align: justify;
-    color: #202238;
-}
+
 .tab-content .level, .tab-content-ens .level {
     display: none;
 }
 .tab-content .active, .tab-content-ens .active {
     display: block;
-}
-.tabs .active, .tabs-ens .active {
-    background-color: #ffffff;
-    color: #4d5bf9;
 }
 
 .deep-evolution{
@@ -432,9 +428,13 @@ h4 {
     margin: 2rem auto;
     width: 90%;
     border-radius: 0.5rem;
+    box-shadow: 0 2rem 3rem rgba(62, 122, 201, 0.2);
 }
 
 @media screen and (min-width:1000px){
+    section.disp-inactive{
+        display: block;
+    }
 
 }
 
