--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ header .title .min-size{
     background-size: cover;
     right: -100vw;
     width: 100vw;
-    transition: all 1s ease-in-out;
+    transition: right 1s ease;
 }
 .menu-list-active{
     right: 0;
@@ -194,15 +194,23 @@ section.search{
     height: 100vh;
 }
 .search input{
+    display: block;
     background: transparent;
     border: 1px solid #fff;
     border-radius: 4rem;
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     padding: 0.8rem 1.5rem;
-    margin-bottom: 1rem;
     outline: none;
     color: #fff;
     font-size: 2rem;
+}
+
+/* **** Main Size **** */
+
+main{
+    max-width: 128rem;
+    margin: 0 auto;
 }
 
 
@@ -251,11 +259,6 @@ footer .social-link .fa{
 
 
 /* **** Menu article **** */
-/*nav.sticky-menu-article{
-    position:sticky;
-    top: calc(42.5px + 3vw);
-    z-index: -1; *//*pour passer sous menu-list-active du menu-burger
-}*/
 
 nav .sub-menu{
     display: flex;
@@ -287,11 +290,6 @@ nav .sub-menu-list:hover{
 
 /* ******** Welcome Page ******** */
 
-/*
-.presentation{
-    position:relative; nécessaire pour z-index
-    z-index: -2; /*pour passer sous sticky-menu-article qui est en -1
-}*/
 .presentation .flex{
     display: none;
 }
@@ -415,6 +413,7 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
 .deep-evolution img{
     margin: 2rem auto;
     width: 90%;
+    max-width: 63rem;
     border-radius: 0.5rem;
     box-shadow: 0 2rem 3rem rgba(62, 122, 201, 0.2);
 }
@@ -425,18 +424,11 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
     }
 }
 
-@media screen and (min-width: 700px){
-    .deep-evolution img{
-        max-width: 63rem;
-    }
-}
-
 
 /* ******** Equipment Page ******** */
 
 .gallery{
     width: 90%;
-    max-width: 50rem;
     height: auto;
     margin: 5rem auto 6rem;
     display: flex;
@@ -446,16 +438,16 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
 .equipment{
     background-color: #ebe8e8;
     border-radius: 20px;
-    width: 100%;
-    height: auto;
+    max-width: 50rem;
+    /* width: auto; */
+    /* height: auto; */
     margin: 0.5rem;
 }
 .visible-content{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /*position: relative;*/
-    /* z-index: 100; */
+    max-width: 50rem;
     background-color: #0c1353;
     border-radius: 10px;
 }
@@ -506,8 +498,6 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
 @media screen and (min-width: 1000px) {
 
     .gallery{
-        width: 100%;
-        max-width: 128rem;
         margin: 4rem auto 0;
         padding: 0 20px;
         display: grid;
@@ -519,9 +509,6 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
         font-size: 1.6rem;
     }
     .equipment{
-        width: auto;
-        /* height: auto; */
-        /* si contenu non uniforme passer en auto*/
         height: 515px;
         margin: 2rem;
     }
@@ -541,5 +528,19 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
     .invisible-content{
         display: initial;
     }
-
 }
+
+/* ******** Spot diving Page******** */
+
+iframe{
+    display: block;
+    width: 90%;
+    max-width: 80rem;
+    height: 60vh;
+    margin: 4rem auto 6rem;
+    border-radius: 1rem;
+    box-shadow: 0 2rem 3rem rgba(62, 122, 201, 0.2);
+}
+
+
+
