--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Quando&display=swap');
 
+
 /* **** Reset **** */
 
 *{
@@ -9,6 +10,20 @@
     list-style-type: none;
     text-decoration: none;
 }
+
+
+/* **** Variables **** */
+
+:root{
+    --main-font-color: #fff;
+    --main-bg-color: #0c1353;
+    --main-gradient: linear-gradient(to right, #15a6c7, #0a2d5e);
+    --bg-color-tabs-level-active: #fff;
+    --font-color-tabs-level-active: #0c1353;
+}
+
+
+/* **** Main Feature Settings **** */
 
 html{
     font-size: 62.5%;
@@ -27,7 +42,7 @@ p{
 h2{
     font-size: calc(5rem + 1.5vw);
     text-align: center;
-    color: #fff;
+    color: var(--main-font-color);
     margin-bottom: 1rem;
     font-weight: 700;
 }
@@ -45,8 +60,8 @@ h3{
 }
 h4{
     font-size: 1.6rem;
-    background-color: #0c1353;
-    color: #fff;
+    background-color: var(--main-bg-color);
+    color: var(--main-font-color);
     text-align: center;
 }
 h5{
@@ -77,7 +92,7 @@ header .logo{
 header .title{
     font-size: calc(1.4rem + 3vw);
     font-family: 'Kalam', cursive;
-    color: #fff;
+    color: var(--main-font-color);
     text-shadow: 0 0.7rem 1rem #000;
 }
 header .title .min-size{
@@ -86,7 +101,7 @@ header .title .min-size{
 .burger-menu{
     width: calc(4rem + 3vw);
     height: calc(4rem + 3vw);
-    position:relative;
+    position: relative;
     cursor: pointer;
 }
 .burger-menu .bar{
@@ -172,11 +187,11 @@ header .title .min-size{
         box-shadow: 0 0.4rem 0.5rem #d3dae2;
     }
     .menu-list a:hover{
-        color: #fff;
+        color: var(--main-font-color);
     }
     .menu-list .active-tab{
         position: relative;
-        color: #fff;
+        color: var(--main-font-color);
         top: -1rem;
     }
 }
@@ -201,7 +216,7 @@ section.search{
     margin: 0 auto;
     padding: 0.8rem 1.5rem;
     outline: none;
-    color: #fff;
+    color: var(--main-font-color);
     font-size: 2rem;
 }
 
@@ -238,11 +253,11 @@ footer{
     font-size: 1.4rem;
     top: 100vh;
     height: calc(2.5rem + 1vh);
-    background-color: #0c1353;
+    background-color: var(--main-bg-color);
 }
 footer p{
     margin-left: 2rem;
-    color: #fff;
+    color: var(--main-font-color);
     font-size: 1.4rem;
 
 }
@@ -250,7 +265,7 @@ footer .social-link ul{
     display: flex;
 }
 footer .social-link a{
-    color: #fff;
+    color: var(--main-font-color);
     margin-right: 2rem;
 }
 footer .social-link .fa{
@@ -267,19 +282,19 @@ nav .sub-menu{
 }
 nav .sub-menu-list{
     font-size: 1.6rem;
-    color: #fff;
+    color: var(--main-font-color);
     text-align: center;
     height: 3.2rem;
     padding: 0.5rem;
     margin: 0 0.3rem 1rem 0.3rem;
-    background-color: #0c1353;
+    background-color: var(--main-bg-color);
     border-bottom-right-radius: 1.5rem;
     border-bottom-left-radius: 0.6rem;
     cursor: pointer;
     transition: 0.4s;
 }
 nav .sub-menu-list:hover{
-    background: linear-gradient(to right, #15a6c7, #0a2d5e); 
+    background: var(--main-gradient); 
 }
 
 @media screen and (min-width:1000px){
@@ -372,25 +387,25 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
     margin: 1rem 3rem;
 }
 .tabs h4, .tabs-ens h4{
-    border-right: 0.2rem solid #094b5a;
+    border-right: 0.1rem solid #fff;
     padding: 1.5rem 0;
     cursor: pointer;
 }
 .tabs h4:hover:not(.active), .tabs-ens h4:hover:not(.active){
-    background: linear-gradient(to right, #15a6c7, #0a2d5e);
+    background: var(--main-gradient);
 }
 .tabs h4:last-of-type, .tabs-ens h4:last-of-type{
     border-right: none;
 }
 .tabs .active, .tabs-ens .active{
-    background-color: #ffffff;
-    color: #0c1353;
+    background-color: var(--bg-color-tabs-level-active);
+    color: var(--font-color-tabs-level-active);
 }
 .tab-content{
     margin-bottom: 4rem;
 }
 .tab-content, .tab-content-ens{
-    background-color: #ffffff;
+    background-color: var(--bg-color-tabs-level-active);
     padding: 2rem 3rem;
 }
 .tab-content img, .tab-content-ens img{
@@ -447,7 +462,7 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
     justify-content: space-between;
     align-items: center;
     max-width: 50rem;
-    background-color: #0c1353;
+    background-color: var(--main-bg-color);
     border-radius: 1rem;
 }
 .equipment h4{
@@ -482,7 +497,7 @@ section#diver p:first-of-type, section#teacher p:first-of-type{
     width: 70%;
     margin: 0 auto;
     height: 0.3rem;
-    background: linear-gradient(to right, #15a6c7, #0a2d5e);
+    background: var(--main-gradient);
     border-radius: 0.2rem;
 }
 .equipment p{
@@ -607,10 +622,10 @@ nav.menu-modal{
 }
 nav button{
     font-family: Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-    color: #fff;
+    color: var(--main-font-color);
     font-size: 1.6rem;
     line-height: 1.6rem;
-    background-color: #0c1353;
+    background-color: var(--main-bg-color);;
     height: 3.2rem;
     border: none;
     border-radius: 1rem;
@@ -632,7 +647,7 @@ nav button{
         align-items: center;
         padding-top: 2rem;
         padding-bottom: 1rem;
-        border: 0.3rem solid #0c1353;
+        border: 0.3rem solid var(--main-bg-color);
     }
     .spots img, .wrapper figure img, .wrapper .spots{
         border-bottom-left-radius: 4rem;
